kcl/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.k8c.ru
    secretName: keycloak-tls-secret
  rules:
  - host: keycloak.k8c.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
